# DirtyData

./: .gitignore  Cargo.toml  README.ja.md  README.md  ROADMAP.md  my_filter.json  my_vco.json  run.bat  run.sh  test_bundle.json
.dirtydata.bak/: config.json  ui_layout.json
.dirtydata.bak/ir/: current.json
.dirtydata.bak/patches/: 01KQ0YB2Y5QYW5H5HQCRHNPXZ5.json  01KQ4QAFAFJ5X88WYFM32HR053.json  01KQ4QATB2RR4D4BA4H427NC3K.json  01KQ4QB9Z3Z31A3806NPNXZD6C.json  01KQ4QEV1C9GJTBF76XF0J33T2.json  01KQ4QF77F2J0FS54JR7D2VZGC.json  01KQ4R38NTSTC3ZG50BWAYSDGX.json  01KQ4R3DT9S47DXN7NHZ5KZF5C.json  01KQ4R3M2VH5DTNYQ2ZQW1HX3Y.json  01KQ4R84XAYNZNS5J1YBBZ165F.json  01KQ4R894P9NW3MH58P5B8Q7FX.json  01KQ4RB1R51629EECMZP93CH2W.json  01KQ4RB48EF8331KH9X4CRKE03.json  01KQ4RB8G5NX92ZVC855YT4RQA.json  01KQ4RBAXCRCYYH6XD2BM0R7W4.json  01KQ4RPS1PTEX8ZRH3NBTMYCET.json  01KQ4RQVNDM8VQDPYF3GKPXGYH.json  01KQ4RQVNFS23023YYA6XYRSGB.json  01KQ4RRFB39WFAA7XTHACY7CRV.json  01KQ4RS51YHN94PCWJ6B3N6S6K.json  01KQ4RSECB8DH697244CTP8S3R.json  01KQ4RT9PYWJKERF6BA4K5E9ZA.json  01KQ4RTAXXA9YR1BRK29BN48AF.json  01KQ4RTFXXXK7QS4BQHE88K7AM.json  01KQ4RTHB5M93NZA50K5JZE6R9.json  01KQ4RTJBZC9336DKHPQ74G103.json  01KQ4RTKTBY6FEEQQRHRQ7Y5YA.json  index.json
.dirtydata.bak/refs/heads/: main
chaos_project/: chaos_machine.json  lorenz_test.json
crates/dirty-exporter/: Cargo.toml
crates/dirty-exporter/src/: lib.rs
crates/dirty-mutate/: Cargo.toml
crates/dirty-mutate/src/: lib.rs
crates/dirtydata-cli/: Cargo.toml
crates/dirtydata-cli/src/: main.rs
crates/dirtydata-core/: Cargo.toml
crates/dirtydata-core/src/: actions.rs  constitution.rs  dsl.rs  exploration.rs  graph_utils.rs  hash.rs  ir.rs  lib.rs  math.rs  merge.rs  mutation.rs  mutation_eval.rs  patch.rs  storage.rs  types.rs  validate.rs
crates/dirtydata-dsp-bbd/: Cargo.toml
crates/dirtydata-dsp-bbd/src/: lib.rs
crates/dirtydata-dsp-chaos/: Cargo.toml
crates/dirtydata-dsp-chaos/src/: lib.rs
crates/dirtydata-dsp-circuit/: Cargo.toml
crates/dirtydata-dsp-circuit/src/: lib.rs
crates/dirtydata-dsp-clipper/: Cargo.toml
crates/dirtydata-dsp-clipper/src/: lib.rs
crates/dirtydata-dsp-control/: Cargo.toml
crates/dirtydata-dsp-control/src/: lib.rs
crates/dirtydata-dsp-cv/: Cargo.toml
crates/dirtydata-dsp-cv/src/: lib.rs
crates/dirtydata-dsp-destruction/: Cargo.toml
crates/dirtydata-dsp-destruction/src/: lib.rs
crates/dirtydata-dsp-fft/: Cargo.toml
crates/dirtydata-dsp-fft/src/: lib.rs
crates/dirtydata-dsp-ks/: Cargo.toml
crates/dirtydata-dsp-ks/src/: lib.rs
crates/dirtydata-dsp-matrix/: Cargo.toml
crates/dirtydata-dsp-matrix/src/: lib.rs
crates/dirtydata-dsp-modal/: Cargo.toml
crates/dirtydata-dsp-modal/src/: lib.rs
crates/dirtydata-dsp-reaction/: Cargo.toml
crates/dirtydata-dsp-reaction/src/: lib.rs
crates/dirtydata-dsp-spectral/: Cargo.toml
crates/dirtydata-dsp-spectral/src/: lib.rs
crates/dirtydata-dsp-spring/: Cargo.toml
crates/dirtydata-dsp-spring/src/: lib.rs
crates/dirtydata-dsp-svf/: Cargo.toml  blueprint.toml
crates/dirtydata-dsp-svf/src/: lib.rs
crates/dirtydata-dsp-tape/: Cargo.toml
crates/dirtydata-dsp-tape/src/: lib.rs
crates/dirtydata-dsp-vocal/: Cargo.toml
crates/dirtydata-dsp-vocal/src/: lib.rs
crates/dirtydata-dsp-wavelet/: Cargo.toml
crates/dirtydata-dsp-wavelet/src/: lib.rs
crates/dirtydata-dsp-wdf/: Cargo.toml
crates/dirtydata-dsp-wdf/src/: lib.rs
crates/dirtydata-dsp-zdf/: Cargo.toml
crates/dirtydata-dsp-zdf/src/: lib.rs
crates/dirtydata-host/: Cargo.toml
crates/dirtydata-host/src/: lib.rs  mutation_service.rs
crates/dirtydata-intent/: Cargo.toml
crates/dirtydata-intent/src/: attribution.rs  lib.rs
crates/dirtydata-observer/: Cargo.toml
crates/dirtydata-observer/src/: divergence.rs  lib.rs
crates/dirtydata-plugin-lorenz/: Cargo.toml
crates/dirtydata-plugin-lorenz/src/: lib.rs
crates/dirtydata-plugin-sdk/: Cargo.toml
crates/dirtydata-plugin-sdk/src/: lib.rs
crates/dirtydata-python/: Cargo.toml  pyproject.toml
crates/dirtydata-python/python/dirtydata/: __init__.py
crates/dirtydata-python/src/: lib.rs
crates/dirtydata-runtime/: Cargo.toml
crates/dirtydata-runtime/src/: freeze.rs  jit.rs  lib.rs  offline.rs  osc.rs
crates/dirtydata-runtime/src/nodes/: base.rs  circuit.rs  destruction.rs  legacy.rs  mod.rs  nonlinear.rs  physical.rs  processors.rs  sources.rs  spatial.rs  spectral.rs  subgraph.rs  utilities.rs
crates/dirtydata-runtime/src/tests/: null_test.rs
crates/dirtydata-sdk/: Cargo.toml
crates/dirtydata-sdk/src/: lib.rs
crates/dirtyrack-cli/: Cargo.toml
crates/dirtyrack-cli/src/: inner_execute.rs  main.rs
crates/dirtyrack-gui/: Cargo.toml
crates/dirtyrack-gui/src/: browser.rs  cable.rs  circuit_editor.rs  commander.rs  engine.rs  exporter.rs  faceplate.rs  lib.rs  rack.rs
crates/dirtyrack-modules/: Cargo.toml
crates/dirtyrack-modules/src/: automata.rs  bernoulli.rs  biquad.rs  chaos.rs  circuit.rs  clock_tree.rs  composite.rs  compressor.rs  delay.rs  drift.rs  envelope.rs  erosion.rs  fluid_lfo.rs  lfo.rs  lib.rs  logic.rs  mackeyglass.rs  merkle_delay.rs  midi.rs  noise.rs  output.rs  parallel_runner.rs  quantizer.rs  recorder.rs  registry.rs  renderer.rs  reverb.rs  runner.rs  saturation.rs  scope.rs  sequencer.rs  sh.rs  signal.rs  subpatch_io.rs  switch.rs  vca.rs  vcf.rs  vco.rs  wavefolder.rs  wdf.rs  (+2 more)
crates/dirtyrack-modules/tests/: determinism_test.rs  polyphony_test.rs
crates/dirtyrack-sdk/: Cargo.toml
crates/dirtyrack-sdk-macros/: Cargo.toml
crates/example-thirdparty-module/: build_wasm.sh
crates/tutorial-bitcrush/: Cargo.toml
docs/: API Usage.md  Developer_Guide.md  RFC_001_DIRTYDATA_SPEC.md  Tutorial_Creating_Modules.md  architecture.md  cli_reference.md  design_philosophy.md  plugin_development.md
docs/ja/: API Usage.md  Developer_Guide.ja.md  RFC_001_DIRTYDATA_SPEC.md  Tutorial_Creating_Modules.md  api_reference.md  architecture.md  cli_reference.md  design_philosophy.md  plugin_development.md
test_project/: chaos_machine.json  my_synth.json  patch_8643d506.json  patch_f2626e6a.json
(+5 files in other folders)
