[workspace]
members = [
    "crates/dirtydata-core",
    "crates/dirtydata-runtime",
    "crates/dirtydata-observer",
    "crates/dirtydata-host",
    "crates/dirtydata-intent",
    "crates/dirtydata-cli",
    "crates/dirty-exporter",
    "crates/dirty-mutate",
    "crates/dirtydata-sdk",
    "crates/tutorial-bitcrush",
    "crates/dirtydata-python",
    "crates/dirtydata-dsp-*",
    "crates/dirtyrack-modules",
    "crates/dirtyrack-gui",
    "crates/dirtyrack-sdk",
    "crates/dirtyrack-sdk-macros",
    "crates/example-thirdparty-module",
    "crates/dirtyrack-cli", "crates/dirtydata-plugin-lorenz", "crates/dirtydata-plugin-sdk",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Research-grade forensic audio & circuit simulation framework"
repository = "https://github.com/Yasuno-5555/DirtyData"
homepage = "https://github.com/Yasuno-5555/DirtyData"
keywords = ["audio", "dsp", "forensic", "mna", "determinism"]
categories = ["multimedia::audio", "science"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ulid = { version = "1", features = ["serde"] }
blake3 = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
