[package]
name = "dirty-exporter"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
description = "Compiler for .dirtydata projects — Transmuting IR into standalone binaries."

[dependencies]
dirtydata-core = { path = "../dirtydata-core" , version = "0.1.0" }
dirtydata-runtime = { path = "../dirtydata-runtime" , version = "0.1.0" }
anyhow = "1.0"
serde_json.workspace = true
quote = "1.0"
proc-macro2 = "1.0"
syn = "2.0"
tempfile = "3.8"
zip = "0.6"
