[package]
name = "dirty-mutate"
version = "0.1.0"
edition = "2021"
description = "Headless evolutionary engine for .dirtydata patches."

[dependencies]
dirtydata-core = { path = "../dirtydata-core" }
dirtydata-runtime = { path = "../dirtydata-runtime" }
anyhow = "1.0"
rand = "0.8"
indicatif = "0.17"
rayon = "1.8"
serde_json = "1.0"
