[package]
name = "dirty-mutate"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
description = "Headless evolutionary engine for .dirtydata patches."

[dependencies]
dirtydata-core = { path = "../dirtydata-core" , version = "0.1.0" }
dirtydata-runtime = { path = "../dirtydata-runtime" , version = "0.1.0" }
anyhow = "1.0"
rand = "0.8"
indicatif = "0.17"
rayon = "1.8"
serde_json.workspace = true
