[package]
name = "dirtydata-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Command-line interface for the DirtyData forensic audio engine"
repository.workspace = true
keywords.workspace = true

[[bin]]
name = "dirty"
path = "src/main.rs"

[dependencies]
dirtydata-core = { path = "../dirtydata-core" , version = "0.1.0" }
dirtydata-host = { path = "../dirtydata-host" , version = "0.1.0" }
dirtydata-runtime = { path = "../dirtydata-runtime" , version = "0.1.0" }
dirtydata-sdk = { path = "../dirtydata-sdk" , version = "0.1.0" }
dirty-mutate = { path = "../dirty-mutate" , version = "0.1.0" }
dirty-exporter = { path = "../dirty-exporter" , version = "0.1.0" }

clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
serde.workspace = true
serde_json.workspace = true
anyhow = "1.0"
indicatif = "0.17"
tokio = { version = "1.32", features = ["full"] }
hex = "0.4"
tracing-subscriber.workspace = true
