[package]
name = "dirtydata-dsp-circuit"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MNA-based circuit simulation and sandbox environment"
repository.workspace = true
keywords.workspace = true

[dependencies]
serde.workspace = true
nalgebra = "0.34"
rand = "0.8"
