[package]
name = "dirtydata-dsp-spectral"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "High-performance FFT-based spectral transformation and freezing"
repository.workspace = true
keywords.workspace = true

[dependencies]
rustfft = "6.1"
serde.workspace = true
