[package]
name = "dirtydata-dsp-svf"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Topology-preserving state variable filters (TPT-SVF) with nonlinear saturation"
repository.workspace = true
keywords.workspace = true

[dependencies]
serde.workspace = true
