[package]
name = "dirtydata-host"
description = "Plugin Sandbox / Foreign Boundary — stub"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
bytemuck = "1.14"
thiserror.workspace = true
dirtydata-core = { path = "../dirtydata-core" , version = "0.1.0" }
libloading = "0.9.0"
vst3 = "0.3.0"
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tempfile = "3.27.0"
tokio = { version = "1.52.1", features = ["full"] }
futures-util = "0.3.32"
dirtydata-intent = { version = "0.1.0", path = "../dirtydata-intent" }
blake3.workspace = true
hex = "0.4.3"
walkdir = "2.5.0"
