[package]
name = "dirtydata-observer"
description = "Provenance Engine — stub"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
dirtydata-core = { path = "../dirtydata-core" , version = "0.1.0" }
serde.workspace = true
serde_json.workspace = true
