[package]
name = "dirtydata"
version.workspace = true
edition.workspace = true

[lib]
name = "dirtydata"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"
dirtydata-dsp-chaos = { path = "../dirtydata-dsp-chaos" , version = "0.1.0" }
dirtydata-dsp-reaction = { path = "../dirtydata-dsp-reaction" , version = "0.1.0" }
dirtydata-dsp-spectral = { path = "../dirtydata-dsp-spectral" , version = "0.1.0" }
dirtydata-dsp-svf = { path = "../dirtydata-dsp-svf" , version = "0.1.0" }
anyhow = "1.0"

[build-dependencies]
pyo3-build-config = "0.22"
