[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "dirtydata"
version = "0.1.0"
description = "Python bindings for DirtyData forensic audio engine"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "dirtydata"
python-source = "python"
