[package]
name = "dirtydata-sdk"
version = "0.1.0"
edition = "2021"
description = "SDK for building third-party DSP nodes for DirtyData"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytemuck = "1.13"
dirtydata-core = { path = "../dirtydata-core" }
dirtydata-host = { path = "../dirtydata-host" }
dirtydata-runtime = { path = "../dirtydata-runtime" }
dirtydata-intent = { path = "../dirtydata-intent" }
anyhow = "1.0"
