[package]
name = "dirtydata-sdk"
version = "0.1.0"
edition = "2021"
description = "SDK for building third-party DSP nodes for DirtyData"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytemuck = "1.13"
dirtydata-core = { path = "../dirtydata-core" }
dirtydata-host = { path = "../dirtydata-host" }
dirtydata-runtime = { path = "../dirtydata-runtime" }
dirtydata-intent = { path = "../dirtydata-intent" }
anyhow = "1.0"

# DSP Crates
dirtydata-dsp-spectral = { path = "../dirtydata-dsp-spectral" }
dirtydata-dsp-reaction = { path = "../dirtydata-dsp-reaction" }
dirtydata-dsp-destruction = { path = "../dirtydata-dsp-destruction" }
dirtydata-dsp-control = { path = "../dirtydata-dsp-control" }
dirtydata-dsp-matrix = { path = "../dirtydata-dsp-matrix" }
dirtydata-dsp-cv = { path = "../dirtydata-dsp-cv" }
dirtydata-dsp-zdf = { path = "../dirtydata-dsp-zdf" }
dirtydata-dsp-svf = { path = "../dirtydata-dsp-svf" }
dirtydata-dsp-ks = { path = "../dirtydata-dsp-ks" }
dirtydata-dsp-tape = { path = "../dirtydata-dsp-tape" }
